--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Clipboard landing page</title>
 
   <link rel="stylesheet" href="./css/style.css">
@@ -13,10 +15,153 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
- 
-  
+
+  <header class="header-bg">
+    <section class="header-container" aria-labelledby="header-title">
+      <a href="#"><img src="./images/logo.svg" alt="Clipboard"></a>
+      <h1 id="header-title">A history of everything you copy</h1>
+      <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your
+        devices.</p>
+      <div class="download-buttons">
+        <a href="#">Download for iOS</a>
+        <a href="#">Download for Mac</a>
+      </div>
+    </section>
+  </header>
+
+  <main class="main-container">
+    <div class="section-track-container-bg">
+      <section class="section-track-container" aria-labelledby="track-title">
+        <header class="header-track">
+          <h2 id="track-title">Keep track of your snippets</h2>
+          <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately
+            on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+        </header>
+        <ul class="track-vantagens-list">
+          <li class="track-vantagens-item">
+            <h3>Quick Search</h3>
+            <p>Easily search your snippets by content, category, web address, application, and more.</p>
+          </li>
+
+          <li class="track-vantagens-item">
+            <h3>iCloud Sync</h3>
+            <p>Instantly saves and syncs snippets across all your devices.</p>
+          </li>
+
+          <li class="track-vantagens-item">
+            <h3>Complete History</h3>
+            <p>Retrieve any snippets from the first moment you started using the app.</p>
+          </li>
+        </ul>
+      </section>
+    </div>
+
+    <section class="section-anywhere" aria-labelledby="anywhere-title">
+      <header class="header-anywhere">
+        <h2 id="anywhere-title">Access Clipboard anywhere</h2>
+        <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple
+          clicks.</p>
+      </header>
+      <picture>
+        <img src="./images/image-devices.png" alt="" aria-hidden="true">
+      </picture>
+    </section>
+
+    <section class="section-workflow">
+      <header class="header-workflow">
+        <h2>Supercharge your workflow</h2>
+        <p>We’ve got the tools to boost your productivity.</p>
+      </header>
+
+      <ul class="workflow-list">
+        <li class="workflow-item">
+          <img src="./images/icon-blacklist.svg" alt="" aria-hidden="true">
+          <h3>Create blacklists</h3>
+          <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </li>
+        <li class="workflow-item">
+          <img src="./images/icon-blacklist.svg" alt="" aria-hidden="true">
+          <h3>Plain text snippets</h3>
+          <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        </li>
+        <li class="workflow-item">
+          <img src="./images/icon-blacklist.svg" alt="" aria-hidden="true">
+          <h3>Sneak preview</h3>
+          <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="section-partners" aria-label="Partners Section">
+      <picture>
+        <img src="./images/logo-google.png" alt="Google">
+      </picture>
+      <picture>
+        <img src="./images/logo-ibm.png" alt="IBM">
+      </picture>
+      <picture>
+        <img src="./images/logo-microsoft.png" alt="Microsoft">
+      </picture>
+      <picture>
+        <img src="./images/logo-hp.png" alt="Hewlett Packard">
+      </picture>
+      <picture>
+        <img src="./images/logo-vector-graphics.png" alt="Vector Graphics">
+      </picture>
+    </section>
+
+    <section class="section-download">
+      <h2>Clipboard for iOS and Mac OS</h2>
+      <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding
+        to your clipboard.</p>
+      <div class="download-buttons">
+        <a href="#">Download for iOS</a>
+        <a href="#">Download for Mac</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer-container-bg">
+    <section class="footer-container">
+      <a href="#"><img src="./images/logo.svg" alt="Clipboard"></a>
+
+      <nav class="nav-footer" aria-label="Navegacao Primaria">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="#">FAQs</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Privacy Policy</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Install Guide</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Press Kit</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="social-list">
+        <li class="social-item">
+          <a href="#"><img src="/images/icon-facebook.svg" alt="Facebook"></a>
+        </li>
+        <li class="social-item">
+          <a href="#"><img src="/images/icon-twitter.svg" alt="Twitter"></a>
+        </li>
+        <li class="social-item">
+          <a href="#"><img src="/images/icon-instagram.svg" alt="Facebook"></a>
+        </li>
+      </ul>
+    </section>
+  </footer>
 
 </body>
+
 </html>
