Css utilitario adicionado as tags

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <header class="header-bg">
     <section class="header-container" aria-labelledby="header-title">
       <a href="#"><img src="./images/logo.svg" alt="Clipboard"></a>
-      <h1 id="header-title">A history of everything you copy</h1>
-      <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your
+      <h1 id="header-title" class="font-1-xxl cor-0">A history of everything you copy</h1>
+      <p class="font-1-l cor-1">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your
         devices.</p>
-      <div class="download-buttons">
+      <div class="download-buttons font-1-l-sb" >
         <a href="#">Download for iOS</a>
         <a href="#">Download for Mac</a>
       </div>
@@ -36,23 +36,23 @@
     <div class="section-track-container-bg">
       <section class="section-track-container" aria-labelledby="track-title">
         <header class="header-track">
-          <h2 id="track-title">Keep track of your snippets</h2>
-          <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately
+          <h2 id="track-title" class="font-1-xl cor-0">Keep track of your snippets</h2>
+          <p class="cor-1">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately
             on all your devices. Our Mac and iOS apps will help you organize everything.</p>
         </header>
-        <ul class="track-vantagens-list">
+        <ul class="track-vantagens-list font-1-s cor-1">
           <li class="track-vantagens-item">
-            <h3>Quick Search</h3>
+            <h3 class="font-1-x cor-0">Quick Search</h3>
             <p>Easily search your snippets by content, category, web address, application, and more.</p>
           </li>
 
           <li class="track-vantagens-item">
-            <h3>iCloud Sync</h3>
+            <h3 class="font-1-x cor-0">iCloud Sync</h3>
             <p>Instantly saves and syncs snippets across all your devices.</p>
           </li>
 
           <li class="track-vantagens-item">
-            <h3>Complete History</h3>
+            <h3 class="font-1-x cor-0">Complete History</h3>
             <p>Retrieve any snippets from the first moment you started using the app.</p>
           </li>
         </ul>
@@ -61,8 +61,8 @@
 
     <section class="section-anywhere" aria-labelledby="anywhere-title">
       <header class="header-anywhere">
-        <h2 id="anywhere-title">Access Clipboard anywhere</h2>
-        <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple
+        <h2 id="anywhere-title" class="font-1-xl cor-0">Access Clipboard anywhere</h2>
+        <p class="cor-1">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple
           clicks.</p>
       </header>
       <picture>
@@ -70,26 +70,26 @@
       </picture>
     </section>
 
-    <section class="section-workflow">
+    <section class="section-workflow" aria-labelledby="workflow-title">
       <header class="header-workflow">
-        <h2>Supercharge your workflow</h2>
-        <p>We’ve got the tools to boost your productivity.</p>
+        <h2 id="workflow-title"class="font-1-xl cor-0">Supercharge your workflow</h2>
+        <p class="cor-0">We’ve got the tools to boost your productivity.</p>
       </header>
 
-      <ul class="workflow-list">
+      <ul class="workflow-list font-1-s cor-1">
         <li class="workflow-item">
           <img src="./images/icon-blacklist.svg" alt="" aria-hidden="true">
-          <h3>Create blacklists</h3>
+          <h3 class="font-1-x cor-0">Create blacklists</h3>
           <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
         </li>
         <li class="workflow-item">
           <img src="./images/icon-blacklist.svg" alt="" aria-hidden="true">
-          <h3>Plain text snippets</h3>
+          <h3 class="font-1-x cor-0">Plain text snippets</h3>
           <p>Remove unwanted formatting from copied text for a consistent look.</p>
         </li>
         <li class="workflow-item">
           <img src="./images/icon-blacklist.svg" alt="" aria-hidden="true">
-          <h3>Sneak preview</h3>
+          <h3 class="font-1-x cor-0">Sneak preview</h3>
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
         </li>
       </ul>
@@ -114,10 +114,10 @@
     </section>
 
     <section class="section-download">
-      <h2>Clipboard for iOS and Mac OS</h2>
-      <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding
+      <h2 class="font-1-xl cor-0">Clipboard for iOS and Mac OS</h2>
+      <p class="cor-1">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding
         to your clipboard.</p>
-      <div class="download-buttons">
+      <div class="download-buttons font-1-l-sb">
         <a href="#">Download for iOS</a>
         <a href="#">Download for Mac</a>
       </div>
@@ -126,10 +126,10 @@
 
   <footer class="footer-container-bg">
     <section class="footer-container">
-      <a href="#"><img src="./images/logo.svg" alt="Clipboard"></a>
+      <a href="#"><img src="./images/logo.svg" alt="Clipboard" width="55" height="55"></a>
 
       <nav class="nav-footer" aria-label="Navegacao Primaria">
-        <ul class="nav-list">
+        <ul class="nav-list cor-0">
           <li class="nav-item">
             <a href="#">FAQs</a>
           </li>
