Estilos do header foram adicionados

--- a/index.html
+++ b/index.html
@@ -20,19 +20,24 @@
 
 
   <header class="header-bg">
-    <section class="header-container" aria-labelledby="header-title">
+    <section class="header-container">
       <a href="#"><img src="./images/logo.svg" alt="Clipboard"></a>
-      <h1 id="header-title" class="font-1-xxl cor-0">A history of everything you copy</h1>
-      <p class="font-1-l cor-1">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your
-        devices.</p>
-      <div class="download-buttons font-1-l-sb" >
-        <a href="#">Download for iOS</a>
-        <a href="#">Download for Mac</a>
-      </div>
-    </section>
+      
+     </section>
   </header>
 
   <main class="main-container">
+    
+    <section class="section-principal">
+      <h1 id="principal-title" class="font-1-xxl cor-0">A history of everything you copy</h1>
+      <p class="font-1-l cor-1">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your
+        devices.</p>
+      <div class="download-buttons font-1-l-sb" >
+        <a href="#" class="botao-1">Download for iOS</a>
+        <a href="#" class="botao-2">Download for Mac</a>
+      </div>
+    </section>
+  
     <div class="section-track-container-bg">
       <section class="section-track-container" aria-labelledby="track-title">
         <header class="header-track">
@@ -118,8 +123,8 @@
       <p class="cor-1">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding
         to your clipboard.</p>
       <div class="download-buttons font-1-l-sb">
-        <a href="#">Download for iOS</a>
-        <a href="#">Download for Mac</a>
+        <a href="#" class="botao-1">Download for iOS</a>
+        <a href="#" class="botao-2">Download for Mac</a>
       </div>
     </section>
   </main>
