Estilo Desktop Aplicado

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <p class="cor-1">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately
             on all your devices. Our Mac and iOS apps will help you organize everything.</p>
         </header>
+        <picture>
+          <img src="./images/image-computer.png" alt="" aria-hidden="true">
+        </picture>
         <ul class="track-vantagens-list font-1-s cor-1">
           <li class="track-vantagens-item">
             <h3 class="font-1-x cor-0">Quick Search</h3>
