--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
 
       <ul class="social-list">
         <li class="social-item">
-          <a href="#"><img src="/images/icon-facebook.svg" alt="Facebook"></a>
+          <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook"></a>
         </li>
         <li class="social-item">
-          <a href="#"><img src="/images/icon-twitter.svg" alt="Twitter"></a>
+          <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter"></a>
         </li>
         <li class="social-item">
-          <a href="#"><img src="/images/icon-instagram.svg" alt="Facebook"></a>
+          <a href="#"><img src="./images/icon-instagram.svg" alt="Facebook"></a>
         </li>
       </ul>
     </section>
