Adicionado alguns aria-label

--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
   <header class="header-bg">
     <section class="header-container">
       <a href="#"><img src="./images/logo.svg" alt="Clipboard"></a>
-
     </section>
   </header>
 
   <main class="main-container">
 
-    <section class="section-principal">
+    <section class="section-principal" aria-labelledby="principal-title">
       <h1 id="principal-title" class="font-1-xxl cor-0">A history of everything you copy</h1>
       <p class="font-1-l cor-1">Clipboard allows you to track and organize everything you copy. Instantly access your
         clipboard on all your
@@ -124,8 +123,8 @@
       </picture>
     </section>
 
-    <section class="section-download">
-      <h2 class="font-1-xl cor-0">Clipboard for iOS and Mac OS</h2>
+    <section class="section-download" aria-labelledby="download-title">
+      <h2 class="font-1-xl cor-0" id="download-title">Clipboard for iOS and Mac OS</h2>
       <p class="cor-1">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready
         to start adding
         to your clipboard.</p>
